# dr-solution

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt  run.py
app/: __init__.py  main.py  models.py
app/api/: routes.py
app/core/: config.py
app/services/: __init__.py  documents.py  providers.py  video.py
scripts/: smoke_video.py
static/: about.html  index.html  privacy.html  robots.txt  sitemap.xml
static/css/: app.css
static/js/: app.js  chat-widget.js  exporter.js
tests/: test_app.py
